// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store - toast-context should hide Toast 1`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-c2b481e2-0 dGESEi"
      data-testid="toast-randomId"
      id="toast-randomId"
    >
      <div
        class="sc-c2b481e2-1 haSkKn success"
      >
        <svg
          color="#ffffff"
          fill="currentColor"
          height="28"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
          />
        </svg>
        <div
          class="sc-c2b481e2-2 cOpAYz"
        >
          <div
            class="sc-c2b481e2-3 sc-c2b481e2-4 lhRooE kxINyd"
          >
            <div
              class="sc-c2b481e2-3 lhRooE"
            >
              <h5
                class="sc-c2b481e2-5 dlbyEI"
              >
                mock Title
              </h5>
            </div>
          </div>
          <p
            class="sc-c2b481e2-6 estfx"
          >
            Mock message.
          </p>
        </div>
        <svg
          class="sc-c2b481e2-7 qfhLu"
          color="#ffffff"
          data-testid="toast-dismiss"
          fill="currentColor"
          height="28"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`store - toast-context should remove Toast 1`] = `<DocumentFragment />`;

exports[`store - toast-context should render provider with children 1`] = `
<DocumentFragment>
  <div>
    Test component
  </div>
</DocumentFragment>
`;

exports[`store - toast-context should show Toast 2`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-c2b481e2-0 cjZdCO"
      data-testid="toast-randomId"
      id="toast-randomId"
    >
      <div
        class="sc-c2b481e2-1 haSkKn success"
      >
        <svg
          color="#ffffff"
          fill="currentColor"
          height="28"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
          />
        </svg>
        <div
          class="sc-c2b481e2-2 cOpAYz"
        >
          <div
            class="sc-c2b481e2-3 sc-c2b481e2-4 lhRooE kxINyd"
          >
            <div
              class="sc-c2b481e2-3 lhRooE"
            >
              <h5
                class="sc-c2b481e2-5 dlbyEI"
              >
                Mock Title
              </h5>
            </div>
          </div>
          <p
            class="sc-c2b481e2-6 estfx"
          >
            Mock message.
          </p>
        </div>
        <svg
          class="sc-c2b481e2-7 qfhLu"
          color="#ffffff"
          data-testid="toast-dismiss"
          fill="currentColor"
          height="28"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
